--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="newan creations" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ඔබට අවශ්‍ය post හදාගන්න දැන්ම කතා කරන්න ඔනේම post එකකට 
+    <meta name="description" content="ඔබට අවශ්‍ය post හදාගන්න දැන්ම කතා කරන්න ඔනේම post  
 -Tution class post
 -company posts
 -any posts">
@@ -27,7 +27,7 @@
             <nav>
                 <ul class="flex space-x-8">
                     <li><a href="#about" class="hover:text-gray-200">About</a></li>
-                    <li><a href="#portfolio" class="hover:text-gray-200">Portfolio</a></li>
+                    <li><a href="#0776719944" class="hover:text-gray-200">follow us</a></li>
                     <li><a href="#contact" class="hover:text-gray-200">Contact</a></li>
                 </ul>
             </nav>
@@ -35,10 +35,10 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="bg-cover bg-center h-screen flex flex-col justify-center items-center text-center bg-indigo-900 text-white" style="background-image: url('https://via.placeholder.com/1600x900');">
-        <h2 class="text-5xl font-semibold mb-4">Hi, I'm [Your Name]</h2>
+    <section class="bg-cover bg-center h-screen flex flex-col justify-center items-center text-center bg-indigo-900 text-white" style="background-image: url('https://i.natgeofe.com/n/d6bd5cdc-528f-4887-9cc3-3fb4e10d6651/sri-lanka-travel.jpg?w=2880&h=1922');">
+        <h2 class="text-5xl font-semibold mb-10">NEWAN.LK</h2>
         <p class="text-lg mb-8">Creative Graphic Designer with a passion for making beautiful things</p>
-        <a href="#portfolio" class="bg-indigo-500 px-6 py-3 rounded-full text-lg font-semibold hover:bg-indigo-700 transition duration-300">View Portfolio</a>
+        <a href="#portfolio" class="bg-indigo-500 px-6 py-3 rounded-full text-lg font-semibold hover:bg-indigo-700 transition duration-300">contact now </a>
     </section>
 
     <!-- About Section -->
@@ -49,56 +49,26 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="py-20 bg-gray-100">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold text-indigo-600 mb-8">My Portfolio</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Portfolio Item 1 -->
-                <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 1" class="w-full h-64 object-cover">
-                    <div class="p-4">
-                        <h3 class="font-semibold text-xl">Project Title 1</h3>
-                        <p class="text-gray-500 mt-2">A description of this project and the work done.</p>
-                    </div>
-                </div>
-                <!-- Portfolio Item 2 -->
-                <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 2" class="w-full h-64 object-cover">
-                    <div class="p-4">
-                        <h3 class="font-semibold text-xl">Project Title 2</h3>
-                        <p class="text-gray-500 mt-2">A description of this project and the work done.</p>
-                    </div>
-                </div>
-                <!-- Portfolio Item 3 -->
-                <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 3" class="w-full h-64 object-cover">
-                    <div class="p-4">
-                        <h3 class="font-semibold text-xl">Project Title 3</h3>
-                        <p class="text-gray-500 mt-2">A description of this project and the work done.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-indigo-600 text-white text-center">
         <div class="container mx-auto">
-            <h2 class="text-3xl font-bold mb-4">Contact Me</h2>
+ <!-- Hero Section -->
+    <section class="bg-cover bg-center h-screen flex flex-col justify-center items-center text-center bg-indigo-900 text-white" style="background-image: url('https://www.onthegotours.com/repository/Buddha-statues-in-Colombo--Sri-Lanka-Tours--On-The-Go-Tours-286321455553253.jpg');">
+            <h2 class="text-3xl font-bold mb-">Contact Me</h2>
             <p class="text-lg mb-8">Feel free to get in touch for collaborations or inquiries.</p>
-            <a href="wthilani20@gmail.com" class="bg-white text-indigo-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-gray-200 transition duration-300">Email Me</a>
+            <a href="wthilani20@gmail.com" class="bg-black text-white-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-gray-200 transition duration-300">call now </a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-6">
         <div class="container mx-auto text-center">
-            <p>&copy; 2025 DesignerHub. All Rights Reserved.</p>
+            <p>&copy; 2025 newan_creations. All Rights Reserved.</p>
             <div class="mt-4">
-                <a href="https://web.facebook.com/me/" target="_blank" class="text-indigo-400 mx-2"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com" target="_blank" class="text-indigo-400 mx-2"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com" target="_blank" class="text-indigo-400 mx-2"><i class="fab fa-github"></i></a>
+                <a href="/https://web.facebook.com/share/p/12GE5PFGNYL/" target="_blank" class="text-indigo-400 mx-2">
+                <a href="call now 0776719944" target="_blank" class="text-indigo-400 mx-2">
             </div>
         </div>
     </footer>
